crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__expressions__binary_operators_break_safely.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun binaryOperatorsBreakSafely(
  aLongVariableName: Int,
  anotherLongVariableName: Int,
  yetAnother: Int,
  lastOne: Int,
) {
  val subtraction =
    aLongVariableName - anotherLongVariableName - yetAnother - lastOne - lastOne
  val multiplication =
    aLongVariableName * anotherLongVariableName * yetAnother * lastOne * lastOne
  val comparison =
    aLongVariableName == anotherLongVariableName && yetAnother == lastOne
}

diagnostics:
(none)
