crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__expressions__call_chains.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.expressions

fun callChains(source: Sequence<String>): List<String> =
  source.map { it.trim() }.filter { it.isNotEmpty() }.sorted().toList()

diagnostics:
(none)
