crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__expressions__collection_builders.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.expressions

val words =
  listOf(
    "alpha",
    "beta",
    "gamma",
  )

val index =
  mapOf(
    "alpha" to 1,
    "beta" to 2,
  )

diagnostics:
(none)
