crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__expressions__deep_lambda_control_flow.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.expressions

fun lengths(values: List<String>, emit: (String) -> Unit): List<Int> {
  return values.map { raw ->
    val trimmed = raw.trim()
    if (trimmed.isEmpty()) {
      return@map 0
    }
    emit(trimmed)
    trimmed.length
  }
    .filter { length -> length > 1 }
    .sorted()
}

diagnostics:
(none)
