crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__expressions__destructuring.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.expressions

fun totals(entries: List<Pair<String, Int>>): Map<String, Int> {
  val result = mutableMapOf<String, Int>()
  for ((name, count) in entries) {
    result[name] = (result[name] ?: 0) + count
  }
  return result
}

diagnostics:
(none)
