crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__expressions__elvis_and_safe_calls.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.expressions

class User(val profile: Profile?)

class Profile(val email: String?)

fun email(user: User?): String = user?.profile?.email ?: "missing@example.com"

class Pack(val progress: Progress)

class Progress

class Healthy(val status: Status) : Progress()

enum class Status {
  Unknown,
}

fun status(pack: Pack): Status {
  val status = (pack.progress as? Healthy)?.status ?: return Status.Unknown
  return status
}

diagnostics:
(none)
