crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__expressions__formatter_ignore_list_boundaries.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
val markerBeforeComma = listOf(
  // @formatter:off
  1   +   2
  // @formatter:on
  ,
  trailingValue,
)

val inlineMarkerBeforeComma = listOf(
  // @formatter:off
  1   +   2 /* @formatter:on */,
  trailingValue,
)

val adjacentIgnoredRuns = listOf(
  // @formatter:off
  first   +   value
  // @formatter:on
  ,
  // @formatter:off
  second   +   value
  // @formatter:on
  ,
  trailingValue,
)

val ignoredLambdaParameters = { // @formatter:off
  first   :   Int
  // @formatter:on
  , second: Int ->
  first + second
}

val ownLineIgnoredLambdaParameters = {
  // @formatter:off
  first   :   Int
  // @formatter:on
  , second: Int ->
  first + second
}

fun <T> ignoredTypeConstraints(value: T): T
  where // @formatter:off
    T   :   FirstConstraint
    // @formatter:on
    ,
    T : SecondConstraint = value

fun <T> ownLineIgnoredTypeConstraints(value: T): T
  where
    // @formatter:off
    T   :   FirstConstraint
    // @formatter:on
    ,
    T : SecondConstraint = value

fun ignoredWhenConditions(value: Any): Int = when (value) {
  // @formatter:off
  is   FirstType
  // @formatter:on
  , is SecondType ->
    1
  else -> 0
}

class IgnoredDelegation
  :
    // @formatter:off
    FirstType   ,   SecondType
// @formatter:on
{
}

diagnostics:
(none)
