crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__expressions__formatter_ignore_partial_expression_list.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
val partlyAlignedNumbers = listOf(
  leadingValue,
  // @formatter:off
  1,   2,   3,
  10,  20,  30,
  // @formatter:on
  trailingValue,
)

diagnostics:
(none)
