crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__expressions__labeled_nested_lambdas.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.expressions

fun visit(groups: List<List<String>>, emit: (String) -> Unit) {
  groups.forEach outer@{ group ->
    group.forEach inner@{ item ->
      if (item.isBlank()) return@inner
      if (item == "stop") return@outer
      emit(item.trim())
    }
  }
}

diagnostics:
(none)
