crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__expressions__lambda_formatting.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.expressions

val shout = { value: String -> value + "!" }

val sum = { left: Int, right: Int -> left + right }

fun invoke(block: (Int) -> Int): Int = block(1)

val doubled = invoke { value -> value * 2 }

diagnostics:
(none)
