crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__expressions__lambda_only_receiver_chain.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun lambdaOnlyReceiver(items: List<Int>) {
  items.forEach { println(it) }
  items.map { it + 1 }.filter { it > 1 }
}

diagnostics:
(none)
